--- a/remarks.html
+++ b/remarks.html
@@ -8,152 +8,188 @@
   <!-- 공통 CSS -->
   <link rel="stylesheet" href="assets/hcms.css">
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
   <style>
     body {
       margin: 0;
-      padding: 24px;
-      background: #f2f2f2;
       font-family: Arial, sans-serif;
-      font-size: 17px;
-      color: #222;
+      background: #2e2e2e;
+      color: #f5f5f5;
     }
 
-    h1 {
-      margin-bottom: 20px;
+    /* ===== 상단 바 ===== */
+    .topbar {
+      background: #ff8a00;
+      padding: 14px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
 
+    .topbar img {
+      height: 42px;
+    }
+
+    .topbar .title {
+      font-size: 26px;
+      font-weight: 900;
+      color: #000;
+    }
+
+    /* ===== 메인 ===== */
+    .container {
+      max-width: 1600px;
+      margin: auto;
+      padding: 28px;
+    }
+
+    h2 {
+      margin: 0 0 16px 0;
+      font-size: 24px;
+    }
+
+    /* ===== 필터 ===== */
     .filter-box {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 12px;
-      margin-bottom: 16px;
+      gap: 14px;
+      margin-bottom: 18px;
     }
 
-    input, select, button {
+    .filter-box input,
+    .filter-box select {
       height: 48px;
       font-size: 16px;
-      padding: 0 10px;
+      padding: 0 12px;
+      border-radius: 8px;
+      border: none;
     }
 
-    button {
-      cursor: pointer;
+    .btn {
+      height: 48px;
+      font-size: 16px;
       font-weight: bold;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      background: #ff8a00;
+      color: #000;
     }
 
+    /* ===== 테이블 ===== */
     table {
       width: 100%;
       border-collapse: collapse;
-      background: #fff;
+      background: #3a3a3a;
     }
 
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid #555;
       padding: 14px;
       text-align: center;
-      vertical-align: middle;
+      vertical-align: top;
     }
 
     th {
-      background: #e6e6e6;
+      background: #444;
+      font-weight: bold;
     }
 
     td.remark {
       text-align: left;
-      min-width: 420px;
-      line-height: 1.6;
+      min-width: 400px;
+      line-height: 1.5;
     }
 
-    .btn-mini {
-      height: 36px;
-      font-size: 14px;
-      margin: 2px;
+    tr:nth-child(even) {
+      background: #353535;
     }
   </style>
 </head>
 
 <body>
 
-<h1>비고 리스트</h1>
+<!-- ===== 상단 ===== -->
+<header class="topbar">
+  <img src="assets/hope.png" alt="희망이엔지">
+  <div class="title">비고 리스트</div>
+  <img src="assets/hanwha.png" alt="한화에너지">
+</header>
 
-<!-- ===== 필터 ===== -->
-<div class="filter-box">
-  <input id="f_no" placeholder="크레인 번호" />
-  <select id="f_type">
-    <option value="">크레인 타입 전체</option>
-    <option value="EOT">EOT</option>
-    <option value="Suspension">Suspension</option>
-    <option value="Gantry">Gantry</option>
-    <option value="Post">Post</option>
-    <option value="Wall">Wall</option>
-    <option value="Monorail">Monorail</option>
-    <option value="Service Crane">Service Crane</option>
-    <option value="타워">타워</option>
-  </select>
-  <select id="f_area">
-    <option value="">지역 전체</option>
-    <option value="A">A</option>
-    <option value="B">B</option>
-  </select>
-  <button onclick="loadRemarks()">필터 적용</button>
-</div>
+<main class="container">
 
-<!-- ===== 테이블 ===== -->
-<table>
-  <thead>
-    <tr>
-      <th>번호</th>
-      <th>타입</th>
-      <th>지역</th>
-      <th>위치</th>
-      <th>비고</th>
-      <th>작성일</th>
-      <th>관리</th>
-    </tr>
-  </thead>
-  <tbody id="remarkList"></tbody>
-</table>
+  <!-- 필터 -->
+  <section>
+    <h2>필터</h2>
+    <div class="filter-box">
+      <input id="f_no" placeholder="크레인 번호" />
+      <select id="f_area">
+        <option value="">지역 전체</option>
+        <option value="A">A</option>
+        <option value="B">B</option>
+      </select>
+      <select id="f_type">
+        <option value="">크레인 타입 전체</option>
+        <option value="EOT">EOT</option>
+        <option value="Suspension">Suspension</option>
+        <option value="Gantry">Gantry</option>
+        <option value="Post">Post</option>
+        <option value="Wall">Wall</option>
+        <option value="Monorail">Monorail</option>
+        <option value="Service Crane">Service Crane</option>
+        <option value="타워">타워</option>
+      </select>
+      <button class="btn" onclick="loadRemarks()">필터 적용</button>
+    </div>
+  </section>
+
+  <!-- 리스트 -->
+  <section>
+    <table>
+      <thead>
+        <tr>
+          <th>번호</th>
+          <th>타입</th>
+          <th>지역</th>
+          <th>비고</th>
+          <th>작성일</th>
+        </tr>
+      </thead>
+      <tbody id="remarkList"></tbody>
+    </table>
+  </section>
+
+</main>
+
+<!-- Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="app.js"></script>
 
 <script>
-/* =========================
-   Supabase 초기화
-========================= */
-const SUPABASE_URL = "https://lzfksuiftgmxwkhwhnhg.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx6ZmtzdWlmdGdteHdraHdobmhnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3NzczMDMsImV4cCI6MjA4MTM1MzMwM30.BHI8dTc18Jw3akhlRL7OZ8_0sYQwjb0-QaMGjKjUfYA";
-const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-/* =========================
-   비고 로드 (400 오류 해결 버전)
-========================= */
 async function loadRemarks() {
   let query = sb
     .from("remarks")
     .select(`
       id,
-      crane_no,
-      crane_type,
-      area,
-      location,
       content,
-      remark_date
+      created_at,
+      crane_no,
+      cranes (
+        crane_type,
+        area
+      )
     `)
-    .order("remark_date", { ascending: false });
+    .order("created_at", { ascending: false });
 
-  const no = document.getElementById("f_no").value.trim();
+  const no = document.getElementById("f_no").value;
   const type = document.getElementById("f_type").value;
   const area = document.getElementById("f_area").value;
 
   if (no) query = query.ilike("crane_no", `%${no}%`);
-  if (type) query = query.eq("crane_type", type);
-  if (area) query = query.eq("area", area);
+  if (type) query = query.eq("cranes.crane_type", type);
+  if (area) query = query.eq("cranes.area", area);
 
   const { data, error } = await query;
-  if (error) {
-    alert(error.message);
-    return;
-  }
+  if (error) return alert(error.message);
 
   const tbody = document.getElementById("remarkList");
   tbody.innerHTML = "";
@@ -162,68 +198,15 @@ async function loadRemarks() {
     const tr = document.createElement("tr");
     tr.innerHTML = `
       <td>${r.crane_no}</td>
-      <td>${r.crane_type || ""}</td>
-      <td>${r.area || ""}</td>
-      <td>${r.location || ""}</td>
+      <td>${r.cranes?.crane_type || ""}</td>
+      <td>${r.cranes?.area || ""}</td>
       <td class="remark">${r.content}</td>
-      <td>${r.remark_date || ""}</td>
-      <td>
-        <button class="btn-mini" onclick="editRemark('${r.id}', '${r.content.replace(/'/g,"&#39;")}', '${r.remark_date || ""}')">수정</button>
-        <button class="btn-mini" onclick="deleteRemark('${r.id}')">삭제</button>
-      </td>
+      <td>${r.created_at?.slice(0,10) || ""}</td>
     `;
     tbody.appendChild(tr);
   });
 }
 
-/* =========================
-   비고 수정
-========================= */
-async function editRemark(id, oldContent, oldDate) {
-  const content = prompt("비고 수정", oldContent);
-  if (!content) return;
-
-  const remark_date = prompt("날짜 (YYYY-MM-DD)", oldDate);
-  if (!remark_date) return;
-
-  const { error } = await sb
-    .from("remarks")
-    .update({
-      content,
-      remark_date
-    })
-    .eq("id", id);
-
-  if (error) {
-    alert(error.message);
-    return;
-  }
-
-  loadRemarks();
-}
-
-/* =========================
-   비고 삭제
-========================= */
-async function deleteRemark(id) {
-  if (!confirm("비고를 삭제할까요?")) return;
-
-  const { error } = await sb
-    .from("remarks")
-    .delete()
-    .eq("id", id);
-
-  if (error) {
-    alert(error.message);
-    return;
-  }
-
-  loadRemarks();
-}
-
-/* =========================
-   초기 로드
-========================= */
 document.addEventListener("DOMContentLoaded", loadRemarks);
 </script>
 
