--- a/remarks.html
+++ b/remarks.html
@@ -2,21 +2,22 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HCMS | 비고 리스트</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- 공통 CSS -->
+  <!-- 공용 CSS -->
   <link rel="stylesheet" href="assets/hcms.css">
 
   <style>
+    /* ===== 공통 톤 (밝은 회색 기준) ===== */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #2e2e2e;
-      color: #f5f5f5;
+      background: #f2f2f2;
+      color: #222;
     }
 
-    /* ===== 상단 바 ===== */
+    /* ===== 상단바 ===== */
     .topbar {
       background: #ff8a00;
       padding: 14px 20px;
@@ -35,37 +36,46 @@
       color: #000;
     }
 
-    /* ===== 메인 ===== */
+    /* ===== 레이아웃 ===== */
     .container {
       max-width: 1600px;
       margin: auto;
       padding: 28px;
     }
 
+    .card {
+      background: #ffffff;
+      border-radius: 14px;
+      padding: 24px;
+      margin-bottom: 24px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
     h2 {
-      margin: 0 0 16px 0;
+      margin: 0 0 18px 0;
       font-size: 24px;
     }
 
     /* ===== 필터 ===== */
-    .filter-box {
+    .filter-grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 14px;
-      margin-bottom: 18px;
+      margin-bottom: 16px;
     }
 
-    .filter-box input,
-    .filter-box select {
-      height: 48px;
+    select, input {
+      height: 52px;
       font-size: 16px;
       padding: 0 12px;
       border-radius: 8px;
-      border: none;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
     }
 
     .btn {
-      height: 48px;
+      height: 52px;
+      padding: 0 24px;
       font-size: 16px;
       font-weight: bold;
       border-radius: 8px;
@@ -79,29 +89,41 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      background: #3a3a3a;
+      font-size: 15px;
     }
 
     th, td {
-      border: 1px solid #555;
+      border: 1px solid #ddd;
       padding: 14px;
       text-align: center;
-      vertical-align: top;
+      vertical-align: middle;
     }
 
     th {
-      background: #444;
+      background: #f0f0f0;
       font-weight: bold;
     }
 
     td.remark {
       text-align: left;
       min-width: 400px;
+      white-space: pre-wrap;
       line-height: 1.5;
     }
 
     tr:nth-child(even) {
-      background: #353535;
+      background: #fafafa;
+    }
+
+    /* ===== 반응형 ===== */
+    @media (max-width: 900px) {
+      .filter-grid {
+        grid-template-columns: 1fr;
+      }
+
+      td.remark {
+        min-width: auto;
+      }
     }
   </style>
 </head>
@@ -117,11 +139,11 @@
 
 <main class="container">
 
-  <!-- 필터 -->
-  <section>
+  <!-- ===== 필터 ===== -->
+  <section class="card">
     <h2>필터</h2>
-    <div class="filter-box">
-      <input id="f_no" placeholder="크레인 번호" />
+    <div class="filter-grid">
+      <input id="f_no" placeholder="크레인 번호 (예: C-014 / TC-01)" />
       <select id="f_area">
         <option value="">지역 전체</option>
         <option value="A">A</option>
@@ -142,12 +164,13 @@
     </div>
   </section>
 
-  <!-- 리스트 -->
-  <section>
+  <!-- ===== 리스트 ===== -->
+  <section class="card">
+    <h2>비고 목록</h2>
     <table>
       <thead>
         <tr>
-          <th>번호</th>
+          <th>크레인 번호</th>
           <th>타입</th>
           <th>지역</th>
           <th>비고</th>
@@ -160,46 +183,65 @@
 
 </main>
 
-<!-- Supabase -->
+<!-- ===== Supabase ===== -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="app.js"></script>
 
 <script>
+/* =========================
+   Supabase 초기화
+========================= */
+const SUPABASE_URL = "https://lzfksuiftgmxwkhwhnhg.supabase.co";
+const SUPABASE_ANON_KEY = "YOUR_ANON_KEY_HERE";
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+/* =========================
+   비고 리스트 로드 (관계 JOIN ❌)
+========================= */
 async function loadRemarks() {
-  let query = sb
+  const no = document.getElementById("f_no").value.trim();
+  const area = document.getElementById("f_area").value;
+  const type = document.getElementById("f_type").value;
+
+  // 1️⃣ remarks 단독 조회
+  const { data: remarks, error } = await sb
     .from("remarks")
-    .select(`
-      id,
-      content,
-      created_at,
-      crane_no,
-      cranes (
-        crane_type,
-        area
-      )
-    `)
+    .select("id, crane_no, content, created_at")
     .order("created_at", { ascending: false });
 
-  const no = document.getElementById("f_no").value;
-  const type = document.getElementById("f_type").value;
-  const area = document.getElementById("f_area").value;
+  if (error) {
+    alert(error.message);
+    return;
+  }
 
-  if (no) query = query.ilike("crane_no", `%${no}%`);
-  if (type) query = query.eq("cranes.crane_type", type);
-  if (area) query = query.eq("cranes.area", area);
+  // 2️⃣ 크레인 정보 조회
+  const craneNos = [...new Set(remarks.map(r => r.crane_no))];
 
-  const { data, error } = await query;
-  if (error) return alert(error.message);
+  const { data: cranes } = await sb
+    .from("cranes")
+    .select("crane_no, crane_type, area")
+    .in("crane_no", craneNos);
 
+  const craneMap = {};
+  (cranes || []).forEach(c => {
+    craneMap[c.crane_no] = c;
+  });
+
+  // 3️⃣ 필터 + 출력
   const tbody = document.getElementById("remarkList");
   tbody.innerHTML = "";
 
-  data.forEach(r => {
+  remarks.forEach(r => {
+    const c = craneMap[r.crane_no] || {};
+
+    if (no && !r.crane_no.includes(no)) return;
+    if (area && c.area !== area) return;
+    if (type && c.crane_type !== type) return;
+
     const tr = document.createElement("tr");
     tr.innerHTML = `
       <td>${r.crane_no}</td>
-      <td>${r.cranes?.crane_type || ""}</td>
-      <td>${r.cranes?.area || ""}</td>
+      <td>${c.crane_type || ""}</td>
+      <td>${c.area || ""}</td>
       <td class="remark">${r.content}</td>
       <td>${r.created_at?.slice(0,10) || ""}</td>
     `;
@@ -207,6 +249,9 @@ async function loadRemarks() {
   });
 }
 
+/* =========================
+   초기 로드
+========================= */
 document.addEventListener("DOMContentLoaded", loadRemarks);
 </script>
 
